remove uninstall scripts