@@ -1,1 +1,11 @@
 # javaFX
+
+# Java version 21
+
+# Download javaFx SDK from the following link
+https://gluonhq.com/products/javafx/
+
+## For running in the intellij IDEA
+
+# Add the following VM options in the run configuration
+--module-path /path/to/javafx-sdk-22.0.1/lib --add-modules javafx.controls,javafx.fxml
